fixing search results display on mobile

--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -7,6 +7,7 @@
     height: 400px;
     overflow-y: scroll;
     z-index: 1;
+    top: 0;
 }
 
 .movie-search-result-wrapper {
